# property

./: .gitignore  README.md  pyproject.toml  setup.py
property/: bandgap.py  hydration.py
tests/: calculator_test.py  test_bandgap.py  test_hydration.py
